-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 10.0.2, Qt Creator 11.0.0-rc1
-
Ubuntu 22.04 LTS
Windows 11
-
ddffbe676 (12.0)
- Open a C++ file in Creator.
- Place the cursor on something which is not part of Qt e.g. the C++-keyword "return".
- Press the F1 key.
Creator will show a mostly empty page in its right sidebar reading that there is no documentation available.
Sure it would be nice to show some documentation about C++ itself, but that's another story. - Press the F1 key again.
On Linux, a text editor opens up. It's not an editor of Qt Creator but the system's editor, e.g. gedit. It shows an empty temporary file, e.g. /tmp/QtCreator-bCVRYf/qtchelp_hMzcaY.
On Windows, a system dialog comes up asking in which editor to open such a file
- relates to
-
QTCREATORBUG-29908 "No Documentation" when pressing F1 in Help mode
-
- Reported
-
-
QTCREATORBUG-31178 Qt Creator opens an empty text file in the tmp folder when clicking a faulty item in its help viewer
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-29371 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 513256,2 | Help: Do not allow opening temporary in Help mode | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |