Help: Do not allow opening temporary in Help mode

In case we have no documentation for an "F1 help request"
we display some temporary with a small hint. Disallow opening
this inside the Help mode to avoid triggering an open request
which ends up in a system dialog trying to open the temporary
local file.

Fixes: QTCREATORBUG-29371
Change-Id: If61c37eb2576cf6f9dcc70b58527a66b284b30f0
Reviewed-by: Eike Ziller <eike.ziller@qt.io>